--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -13903,6 +13903,15 @@
   timeWait: 0 mins
   timeBuild: 52 mins
   timeTotal: 53 mins
+- name: devspaces-code-rhel8
+  tag: 3.18-2
+  taskId: 64881015
+  timeCreate: Tue Oct 8 13:28:42 2024
+  timeStart: Tue Oct 8 13:30:48 2024
+  timeFinish: Tue Oct 8 18:24:56 2024
+  timeWait: 2 mins
+  timeBuild: 294 mins
+  timeTotal: 296 mins
 - name: devspaces-operator
   tag: 3.18-4
   taskId: 64881335
@@ -13930,3 +13939,12 @@
   timeWait: 39 mins
   timeBuild: 5 mins
   timeTotal: 44 mins
+- name: devspaces-operator-bundle
+  tag: 3.18-6
+  taskId: 64887578
+  timeCreate: Tue Oct 8 18:39:56 2024
+  timeStart: Tue Oct 8 18:40:28 2024
+  timeFinish: Tue Oct 8 18:44:50 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
