--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -14047,3 +14047,30 @@
   timeWait: 12 mins
   timeBuild: 6 mins
   timeTotal: 18 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.18-6
+  taskId: 64959317
+  timeCreate: Thu Oct 10 09:13:41 2024
+  timeStart: Thu Oct 10 09:20:40 2024
+  timeFinish: Thu Oct 10 10:34:48 2024
+  timeWait: 6 mins
+  timeBuild: 74 mins
+  timeTotal: 81 mins
+- name: devspaces-operator
+  tag: 3.18-6
+  taskId: 64962733
+  timeCreate: Thu Oct 10 10:54:34 2024
+  timeStart: Thu Oct 10 10:55:14 2024
+  timeFinish: Thu Oct 10 11:15:23 2024
+  timeWait: 0 mins
+  timeBuild: 20 mins
+  timeTotal: 20 mins
+- name: devspaces-operator-bundle
+  tag: 3.18-12
+  taskId: 64962801
+  timeCreate: Thu Oct 10 11:03:20 2024
+  timeStart: Thu Oct 10 11:03:46 2024
+  timeFinish: Thu Oct 10 11:09:10 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
