chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -14128,3 +14128,21 @@
   timeWait: 2 mins
   timeBuild: 5 mins
   timeTotal: 7 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.18-7
+  taskId: 65131421
+  timeCreate: Wed Oct 16 04:51:15 2024
+  timeStart: Wed Oct 16 04:51:36 2024
+  timeFinish: Wed Oct 16 05:49:41 2024
+  timeWait: 0 mins
+  timeBuild: 58 mins
+  timeTotal: 58 mins
+- name: devspaces-operator-bundle
+  tag: 3.18-16
+  taskId: 65133802
+  timeCreate: Wed Oct 16 06:00:17 2024
+  timeStart: Wed Oct 16 06:00:45 2024
+  timeFinish: Wed Oct 16 06:06:16 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
