--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -14227,3 +14227,30 @@
   timeWait: 7 mins
   timeBuild: 5 mins
   timeTotal: 13 mins
+- name: devspaces-udi-rhel8
+  tag: 3.17-6
+  taskId: 65320559
+  timeCreate: Tue Oct 22 19:52:11 2024
+  timeStart: Tue Oct 22 19:52:35 2024
+  timeFinish: Tue Oct 22 20:47:00 2024
+  timeWait: 0 mins
+  timeBuild: 54 mins
+  timeTotal: 54 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.17-4
+  taskId: 65320879
+  timeCreate: Tue Oct 22 19:57:39 2024
+  timeStart: Tue Oct 22 19:58:02 2024
+  timeFinish: Tue Oct 22 20:06:47 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-44
+  taskId: 65322457
+  timeCreate: Tue Oct 22 20:31:28 2024
+  timeStart: Tue Oct 22 20:31:46 2024
+  timeFinish: Tue Oct 22 20:37:07 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
