--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -14245,6 +14245,15 @@
   timeWait: 0 mins
   timeBuild: 8 mins
   timeTotal: 9 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.17-10
+  taskId: 65321661
+  timeCreate: Tue Oct 22 20:12:38 2024
+  timeStart: Tue Oct 22 20:13:49 2024
+  timeFinish: Tue Oct 22 21:11:03 2024
+  timeWait: 1 mins
+  timeBuild: 57 mins
+  timeTotal: 58 mins
 - name: devspaces-operator-bundle
   tag: 3.17-44
   taskId: 65322457
@@ -14254,3 +14263,12 @@
   timeWait: 0 mins
   timeBuild: 5 mins
   timeTotal: 5 mins
+- name: devspaces-operator-bundle
+  tag: 3.17-45
+  taskId: 65323379
+  timeCreate: Tue Oct 22 21:31:42 2024
+  timeStart: Tue Oct 22 21:31:51 2024
+  timeFinish: Tue Oct 22 21:36:13 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
